style:styling cards

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,21 @@
 {%extends 'base.html' %}
 
-{%  %}
+{% block content %}
+    {% for pitch in pitches %}
+    <div class="card" style="width: 20rem;">
+        <div class="card text-center">
+            <div class="card-header">
+            <p>{{pitch.title}}</p>
+            </div>
+            <div class="card-body">
+            <p class="card-text">{{pitch.pitch}}</p>
+            </div>
+            <div class="card-footer text-muted">
+            <p>Posted by: {{pitch.author}}</p>
+            </div>
+        </div>
+
+    </div>
+    {% endfor %}
+
+{% endblock %}
