--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,8 @@
             <p>Posted by: {{pitch.author}}</p>
             </div>
             <div class="vote">
-                <li><i class="fa-solid fa-thumbs-up"></i></li>
-                <li><i class="fa-solid fa-thumbs-down"></i></li>
+                <i class="fa-solid fa-thumbs-up"></i>
+                <i class="fa-solid fa-thumbs-down"></i>
             </div>
         </div>
 
