--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,35 @@
     <title>Document</title>
 </head>
 <body>
+    
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
+        <!-- Navbar content -->
+    
+      
+            
+              <a class="navbar-brand" href="#">Pitch</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <div class="homea">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link" href="#">About</a>
+                </div>
+                  <div class="lgs">
+                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" href="#">Register</a>
+                </div>
+
+                </div>
+              </div>
+            
+          </nav>
+
+
+        </nav>
+      
 
     <div class="container" >
     {% block content %}
