--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="#">About</a>
                 </div>
                   <div class="lgs">
-                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" href="{{url_for('login')}}">Login</a>
                   <a class="nav-link" href="#">Register</a>
                 </div>
 
