--- a/templates/register.html
+++ b/templates/register.html
@@ -1,19 +1,43 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="content-section">
-        <form action="" method="post  ">
+        <form action="" method="POST">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Sign up</legend>
+                <legend class="border-bottom">Sign Up</legend>
                 <div class="form-group">
-                    {{form.username.label(class="form-control-label")}}
-                    {{form.username(class="form-control form-control-label-lg")}}
-                     
+                    {{ form.username.label(class ="form-control-label")}}
+                    {{ form.username(class ="form-control form-control-lg")}}
+
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class ="form-control-label")}}
+                    {{ form.email(class ="form-control form-control-lg")}}
+
+                </div>  
+                <div class="form-group">
+                    {{ form.password.label(class ="form-control-label")}}
+                    {{ form.password(class ="form-control form-control-lg")}}
+
+                </div>
+                <div class="form-group">
+                    {{ form.confirm_password.label(class ="form-control-label")}}
+                    {{ form.confirm_password(class ="form-control form-control-lg")}}
+
                 </div>
 
             </fieldset>
+            <div class="form-group">
+                 {{ form.submit(class = "btn btn-success") }}
+            </div>
 
         </form>
-    </div>
+    <div>
+        <div class="border-top pt-3 ">
+            <small class="text-muted">
+                Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Log in</a>
+            </small>
 
+        </div>
+            
 {% endblock content %}
