--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 #cards{
     margin: 20px;
 
@@ -7,9 +11,7 @@
     justify-content: center;
     gap: 5%;
 }
-.navbar-nav{
-    gap: 90%;
-}
+
 .content-section {
     background: #ffffff;
     padding: 10px 20px;
@@ -17,3 +19,4 @@
     border-radius: 3px;
     margin-bottom: 20px;
   }
+  
