--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
       
 
     <div class="container" >
+        <div class="col-md-5">
        {% with messages = get_flashed_messages(with_categories = true) %}
            {% if messages  %} 
 
@@ -53,6 +54,7 @@
            {% endif %}
 
        {% endwith %}
+    </div>
         
 
     {% block content %}
