--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,71 @@
-{%extends 'base.html' %}
-
+{% extends 'base.html' %}
 {% block content %}
- <h1>Hello welcome to login page</h1>
+<div class="container-fluid" id="loginp">
+    <div class="content-section">
+        <form action="" method="POST">
+            {{ form.hidden_tag() }}
+            <div class="logo">
+                <img src="../static/assets/1651930619016_1651930610313_p logo.png" alt="">
+            </div>
+            <fieldset class="form-group">
+                <legend class="border-bottom" id="leg">Sign in to Pitch</legend>
+                
+                <div class="form-group">
+                    {{ form.email.label(class ="form-control-label")}}
+                    {% if form.email.errors %}
+                        {{ form.email(class ="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
 
-{% endblock %}
+                    {% else %}    
+                       {{ form.email(class ="form-control form-control-lg")}}
+                        
+                    
+                    {% endif %}
+
+                </div>  
+                <div class="form-group">
+                    {{ form.password.label(class ="form-control-label")}}
+                    {% if form.password.errors %}
+                        {{ form.password(class ="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+
+                    {% else %}    
+                       {{ form.password(class ="form-control form-control-lg")}}
+                        
+                    
+                    {% endif %}
+
+                </div>
+                <div class="form-check">
+                    {{ form.remember(class="form-check-input") }}
+                    {{ form.remember.label(class="form-check-label") }}
+
+                </div>
+            </fieldset>
+            <div class="form-group">
+                 {{ form.submit(class = "btn btn-success") }}
+            </div>
+            <small class="text-muted ml-2">
+                <a href="">Forgot Password</a>
+            </small>
+
+        </form>
+    <div>
+        <div class="border-top pt-3 ">
+            <small class="text-muted">
+                Don't have an account? <a class="ml-2" href="{{ url_for('register') }}">Sign up</a>
+            </small>
+
+        </div>
+
+    </div>
+            
+{% endblock content %}
