--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,5 +1,74 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>{{ current_user.username }}</h1>
+ <div class="content-section" id="acct">
+     <div class="image">
+         <img class="rounded-circle" src="{{ profile_img }}" alt="no image">
+     </div>
+     <div class="accdata">
+         <h2>{{ current_user.username }}</h2>
+         <p>{{ current_user.email }}</p>
+     </div>
+ </div>
+ <div class="content-section">
+    <form action="" method="POST" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom">Account information</legend>
+            <div class="form-group">
+                {{ form.username.label(class ="form-control-label")}}
+                    {% if form.username.errors %}
+                        {{ form.username(class ="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>reguired</span>
+                            {% endfor %}
+                        </div>
 
+                    {% else %}    
+                       {{ form.username(class ="form-control form-control-lg")}}
+                        
+                    
+                    {% endif %}
+
+
+            </div>
+            <div class="form-group">
+                {{ form.email.label(class ="form-control-label")}}
+                {% if form.email.errors %}
+                    {{ form.email(class ="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span >{{error}}</span><br>
+                        {% endfor %}
+                    </div>
+
+                {% else %}    
+                   {{ form.email(class ="form-control form-control-lg")}}
+                    
+                
+                {% endif %}
+
+            </div> 
+            <div class="form-group">
+                {{ form.picture.label()}}
+                {{ form.picture(class="form-control-file")}} 
+                {% if form.picture.errors %}
+
+                    {% for error in form.picture.errors %}
+                        <span class="text-danger">{{error}}</span>
+                    {% endfor %}
+
+                {% endif %}
+
+           
+            </div>
+
+        </fieldset>
+        <div class="form-group">
+             {{ form.submit(class = "btn btn-success") }}
+        </div>
+
+    </form>
+
+</div> 
 {% endblock content %}
