--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,8 @@
 
                   <div class="bar">
                     {% if current_user.is_authenticated %}
+                      <a class="nav-link" href="{{url_for('pitch')}}">New Pitch</a>
+                      
                       <a class="nav-link" href="{{url_for('account')}}">Account</a>
 
                       <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
