feat: added delete and update

--- a/app/templates/newpitch.html
+++ b/app/templates/newpitch.html
@@ -7,7 +7,7 @@
             <img src="../static/assets/1651930619016_1651930610313_p logo.png" alt="">
         </div>
         <fieldset class="form-group">
-            <legend class="border-bottom" id="leg">New Pitch</legend>
+            <legend class="border-bottom" id="leg">{{ legend }}</legend>
             
             <div class="form-group">
                 {{ form.title.label(class ="form-control-label")}}
