--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container-fluid" id="loginp">
-    <div class="content-section">
+    <div class="content-section shadow-lg p-3 mb-5 bg-white rounded">
         <form action="" method="POST">
             {{ form.hidden_tag() }}
             <div class="logo">
