--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,48 +7,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://kit.fontawesome.com/bbb7424702.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Pitch</title>
 </head>
 <body>
-    
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
-        <!-- Navbar content -->
-    
-      
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #24494F;"">
+    <div class="container-fluid">
+      <img class="pagelogo" src="../static/assets/1651930619016_1651930610313_p logo.png" alt="">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav"  id="navlist">
+          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
             
-              <a class="navbar-brand" href="#">Pitch</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                
-                  <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
-                  <a class="nav-link" href="{{url_for('about')}}">About</a>
-
-                  <div class="bar">
-                    {% if current_user.is_authenticated %}
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('about')}}">About</a>
+            
+          </li>
+          <li class="nav-item" id="inlineb">
+            {% if current_user.is_authenticated %}
                       <a class="nav-link" href="{{url_for('pitch')}}">New Pitch</a>
                       
                       <a class="nav-link" href="{{url_for('account')}}">Account</a>
 
-                      <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                      <a class="nav-link btn btn-primary" href="{{url_for('logout')}}">Logout</a>
                        
                     {% else %}
                       <a class="nav-link" href="{{url_for('login')}}">Login</a>
                       <a class="nav-link" href="{{url_for('register')}}">Register</a>
-                    {% endif %}  
-
-                </div>
-                
-
-                </div>
-              </div>
-            
-          </nav>
+                    {% endif %} 
+          </li>
+         
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
-        </nav>
+
+
+
+
+      
       
 
     <div class="container" >
@@ -71,7 +74,9 @@
     {% block content %}
 
     {% endblock %}
+   
 </div>
+
 
 
 
