--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="content-section">
+<div class="container" id="regis">
+    <div class="content-section shadow-lg p-3 mb-5 bg-white rounded">
         <form action="" method="POST">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
@@ -88,5 +89,6 @@
 
         </div>
     </div> 
-</div>       
+</div>  
+</div>     
 {% endblock content %}
