--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,8 +25,8 @@
                 
                 <p class="card-text">{{pitch.pitch}}</p>
                 <div class="vote">
-                    <i class="fa-solid fa-thumbs-up"></i>
-                    <i class="fa-solid fa-thumbs-down"></i>
+                    <i class="fa-solid fa-thumbs-up " id="icon1" style="color: #476FFD;"><span id="span1"> 3</span></i>
+                    <i class="fa-solid fa-thumbs-down" id="icon2" style="color: #DC3545;"><span id="span2"> 2</span></i>
                 </div>
                 </div>
                 <div class="card-footer text-muted">
